# rich_img

./: .gitignore  README.md  mess.py  pyproject.toml
rich_img/: block_chars.py  image.py
rich_img_widget/: block_chars.py  image.py
tests/: test_image.py
tests/result/: island.txt
